--- a/bic/bic/templates/analyses/gene_ontology/bacteria_associated_gene_ontology.html
+++ b/bic/bic/templates/analyses/gene_ontology/bacteria_associated_gene_ontology.html
@@ -7,8 +7,8 @@
 
 {% block content %}
     <div class="page-header" id="page-hader">
-        <h3>Bacteria-associated gene ontology</h3>
-        <p>This module enables users to explore the biological processes which a given bacteria might be involved in.  The associated biological are identified by FGSEA using the association between mRNA expression and bacterial abundance as gene rank.</p>
+        <h3>Bacteria-associated biological function</h3>
+        <p>This module enables users to explore the biological processes which a given bacteria might be involved in.  The associated biological functions are identified by FGSEA using the association between mRNA expression and bacterial abundance as gene rank.</p>
         {% include 'analyses/gene_ontology/query.html' %}
     </div>
     
