--- a/bic/bic/templates/analyses/gene_ontology/content.html
+++ b/bic/bic/templates/analyses/gene_ontology/content.html
@@ -1,10 +1,10 @@
 {% load static %}
 
-<h4>Plot of the bacteria-associated gene ontology.</h4>
+<h4>Plot of the bacteria-associated biological function.</h4>
 <div class="callout callout-danger flex-container" id="div_analyses_bacteria_associated_gene_ontology_plot">
 </div>
 
-<h4>Table of the bacteria-associated gene ontology.</h4>
+<h4>Table of the bacteria-associated biological function.</h4>
 <div class="callout callout-info" id="div_analyses_bacteria_associated_gene_ontology_table">
     <table class="table table-condensed table-hover table-bordered" id="analyses_bacteria_associated_gene_ontology_table" width="100%">
         <thead>
@@ -12,7 +12,7 @@
                 <th>Cancer type</th>
                 <th>Taxonomy level</th>
                 <th>Bacteria</th>
-                <th>GO term</th>
+                <th>Term</th>
                 <th>p value</th>
                 <th>FDR</th>
                 <th>ES score</th>
