--- a/bic/bic/templates/analyses/gene_ontology/query.html
+++ b/bic/bic/templates/analyses/gene_ontology/query.html
@@ -76,6 +76,20 @@
 
 
             <div class="form-group row">
+                <label for="select a gene set" class="col-sm-3 control-label">
+                Select a gene set:
+                </label>
+                <div class="col-sm-7">
+                    <select id="gene_set_input" class="form-control">
+                        <option value="gene_ontology">Gene ontology BP</option>
+                        <option value="kegg_pathway">KEGG pathway</option>
+                        <option value="reactome_pathway">Reactome pathway</option>
+                    </select> 
+                </div>
+            </div>
+
+
+            <div class="form-group row">
                 <label for="p_value_cutoff" class="col-sm-3 control-label">
                     Adjusted p-value (cutoff):
                 </label>
