--- a/bic/bic/templates/analyses/gene_ontology/query.html
+++ b/bic/bic/templates/analyses/gene_ontology/query.html
@@ -23,6 +23,7 @@
                             <option value="KICH">Kidney Chromophobe (KICH)</option>
                             <option value="KIRC">Kidney renal clear cell carcinoma (KIRC)</option>
                             <option value="KIRP">Kidney renal papillary cell carcinoma (KIRP)</option>
+                            <option value="LGG">Brain Lower Grade Glioma (LGG)</option>
                             <option value="LIHC">Liver hepatocellular carcinoma (LIHC)</option>
                             <option value="LUAD">Lung adenocarcinoma (LUAD)</option>
                             <option value="LUSC">Lung squamous cell carcinoma (LUSC)</option>
